# retrieval-proposal

./: .gitignore  .mcp.json  pyproject.toml
.claude/: settings.local.json
data/large_codebase/: AC_CHANGE_01.pc  AC_CLOSE_01.pc  AC_DORMANT_01.pc  AC_FREEZE_01.pc  AC_GRADE_01.pc  AC_HIST_01.pc  AC_KYC_CHK.pc  AC_MERGE_01.pc  AC_OPEN_01.pc  AC_UNFREEZE_01.pc  BN_ACCRUED_01.pc  BN_BUY_01.pc  BN_COUPON_01.pc  BN_INT_05.pc  BN_MATURE_01.pc  BN_SELL_01.pc  BN_VALUATION_01.pc  BN_YIELD_01.pc  CM_ACCT_GEN.pc  CM_AUTH_01.pc  CM_CRYPTO_01.pc  CM_DATE_CHK.pc  CM_FEE_CALC.pc  CM_HOLIDAY_CHK.pc  CM_LIMIT_CHK.pc  CM_LOG_01.pc  CM_NOTIFY_01.pc  CM_RATE_01.pc  CM_SEQ_GEN.pc  CM_TAX_01.pc  CM_TRANSFER_01.pc  DV_CALC_01.pc  DV_PAY_01.pc  DV_REINVEST_01.pc  DV_REPORT_01.pc  DV_WITHHOLD_01.pc  FD_KSD_IF_01.pc  FD_NAV_01.pc  FD_PAY_01.pc  FD_REDEEM_01.pc  (+88 more)
data/sample_codebase/: AC_KYC_CHK.pc  AC_OPEN_01.pc  BN_INT_05.pc  CM_ACCT_GEN.pc  CM_DATE_CHK.pc  CM_TAX_01.pc  CM_TRANSFER_01.pc  DV_PAY_01.pc  FD_KSD_IF_01.pc  FD_PAY_01.pc  FD_TAX_02.pc  JG_BAL_02.pc  RD_FEE_03.pc  RD_PROC_01.pc  ST_BUY_01.pc  ST_MARGIN_01.pc  ST_SETL_01.pc  TB_ACCT_MST.sql  TB_FEE_RATE.sql  TB_FUND_DIST.sql  TB_ORD_MST.sql  ac_open_str.h  bn_int_str.h  fd_pay_str.h  rd_fee_str.h  st_buy_str.h  st_setl_str.h
docs/: architecture.md  proposal.pptx  ~$proposal.pptx
scripts/: generate_large_codebase.py  generate_ppt.py  index_all.py  run_evaluation.py  test_mcp_tools.py
src/api/: server.py
src/evaluation/: evaluator.py  ground_truth.py
src/indexer/: chunk_indexer.py  db.py  (+1 more)
web/: index.html
(+9 files in other folders)
